[package]
name = "my_extension"
version = "0.1.0"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
"mosquitto-sys" = {path = "/Users/arshid/Downloads/mosquitto-sys-master"}
mysql = "23.0.1"

[lib]
name = "my_extension"
crate-type = ["cdylib"]

