[package]
name = "mosquitto-auth"
version = "0.1.0"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
mosquitto-io = "0.1.0"
mysql = "23.0.1"

[lib]
crate-type = ["cdylib"]

